--- a/styles/style.admin.css
+++ b/styles/style.admin.css
@@ -102,6 +102,8 @@ nav a{
 }
 .password-hidde:hover{
     color: #fff;
+    -moz-transition-duration: 1s;
+    -o-transition-duration: 1s;
     -webkit-transition-duration: 1s;
 }
 .center{
@@ -109,11 +111,15 @@ nav a{
     margin: 0 auto;
     text-align: center;
     margin-bottom: 10px;
+    background-color: #ccc
 }
 .salto{
     margin-bottom: 10px;
 }
-
+.date{
+    display: inline-block;
+    width: 15px
+}
 .n-label{
     color: #444;
     font-family: 'Lato', Roboto;
