--- a/styles/style.admin.css
+++ b/styles/style.admin.css
@@ -111,14 +111,14 @@ nav a{
     margin: 0 auto;
     text-align: center;
     margin-bottom: 10px;
-    background-color: #ccc
 }
 .salto{
     margin-bottom: 10px;
 }
 .date{
-    display: inline-block;
-    width: 15px
+    float: right;
+    margin-left: 5px;
+    width: 150px;
 }
 .n-label{
     color: #444;
