--- a/styles/style.admin.css
+++ b/styles/style.admin.css
@@ -148,7 +148,13 @@ nav a{
 .data-not img{
     display: inline-block;
 }
-
+.total{
+    background-color: #ccc;
+    height: auto;
+    font-size: 16px;
+    text-align: right;
+    padding: 2px 2px 2px 2px;
+}
 /*Preloader*/
 .loader-wrapper{
     position: relative;
