--- a/styles/style.admin.css
+++ b/styles/style.admin.css
@@ -160,6 +160,9 @@ nav a{
     text-align: right;
     padding: 2px 2px 2px 2px;
 }
+.center-plus{
+    text-align: center;
+}
 /*Preloader*/
 .loader-wrapper{
     position: relative;
