--- a/styles/style.admin.css
+++ b/styles/style.admin.css
@@ -142,6 +142,12 @@ nav a{
     font-family: 'Roboto', Lato, Verdana;
     color: red;
 }
+.mensaje{
+    text-align: center;
+    margin: 0 auto;
+    margin-bottom: 15px;
+    margin-top: 5px;
+}
 .documento-delete{
     font-weight: bold;
 }
