--- a/templates/help/add-pro.html
+++ b/templates/help/add-pro.html
@@ -53,14 +53,14 @@
 </p>
 	<div class="alert alert-warning alert-dismissible mensaje ejemplos" role="alert">
         <button type="button" class="close" data-dismiss="alert"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-        <strong>Warning!</strong> Proveedor registrado con éxito.
+        Proveedor registrado con éxito.
     </div>
 <p class="text">
 	Si ocurre algún error al momento de ingresar un nuevo proveedor, se mostrara el siguiente mensaje, y los campos del formulario continuaran como los dejas para que así puedas revisar los datos nuevamente.
 </p>
 	<div class="alert alert-warning alert-dismissible ejemplos mensaje" role="alert">
         <button type="button" class="close" data-dismiss="alert"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-        <strong>Warning!</strong> Ha ocurrido un error al intentar guardar el proveedor, por favor intenta más tarde.
+        Ha ocurrido un error al intentar guardar el proveedor, por favor intenta más tarde.
     </div>
 <p class="text">
 	Al ingresar un proveedor de forma exitosa, este se mostrara automáticamente en la tabla de proveedores. Si en el momento que se encuentre registrando algún proveedor, desea ingresar otro con datos diferentes, puede dar clic sobre el botón de <em><strong>nuevo</strong></em>, este botón limpiara de forma automática las cajas de texto, para que así pueda seguir con el ingreso de un nuevo proveedor.
