--- a/templates/help/add-pro.html
+++ b/templates/help/add-pro.html
@@ -5,7 +5,7 @@
 
 <h2 class="title-help">Agregar proveedor</h2>
 <p class="text">
-	Para agregar un proveedor, es necesario hacer clic sobre el siguiente botón <em><strong>Agregar proveedor</strong></em> (ver figura 1).
+	Para agregar un proveedor, es necesario hacer clic sobre el botón de <em><strong>Agregar proveedor</strong></em> (ver figura 1).
 	<img class="images" src="./help/images/figura1.png" alt="">
 	<span class="foter-img">Figura 1: agregar nuevo proveedor.</span>
 
