--- a/templates/help/proveedor.html
+++ b/templates/help/proveedor.html
@@ -8,13 +8,13 @@
 <div class="description see">
 	<h2 class="title-see">Ver más información sobre la empresa</h2>
 	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem enim adipisci fugiat labore quae dicta odio facilis, molestiae, velit itaque suscipit eius delectus! Sed officiis qui rem eos exercitationem laboriosam?
-	<a href="">Continuar leyendo</a>
+	<a href="./help.php?module=plus&code=2404201008">Continuar leyendo</a>
 </div>
 
 <div class="description edit">
 	<h2 class="title-edit">Editar datos del proveedor</h2>
 	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem enim adipisci fugiat labore quae dicta odio facilis, molestiae, velit itaque suscipit eius delectus! Sed officiis qui rem eos exercitationem laboriosam?
-	<a href="">Continuar leyendo</a>
+	<a href="./help.php?module=edit&code=7258307149">Continuar leyendo</a>
 </div>
 
 <div class="description delete">
