--- a/templates/help/proveedor.html
+++ b/templates/help/proveedor.html
@@ -18,9 +18,9 @@
 </div>
 
 <div class="description delete">
-	<h2 class="title-help">Eliminar proveedor</h2>
+	<h2 class="title-delete">Eliminar proveedor</h2>
 	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem enim adipisci fugiat labore quae dicta odio facilis, molestiae, velit itaque suscipit eius delectus! Sed officiis qui rem eos exercitationem laboriosam?
-	<a href="">Continuar leyendo</a>
+	<a href="./help.php?module=delete&code=8542136520">Continuar leyendo</a>
 </div>
 
 
