[Update - Manual de usuario]

--- a/templates/help/delete-pro.html
+++ b/templates/help/delete-pro.html
@@ -28,3 +28,11 @@
 		</div>
 	</div>
 </div>
+<p class="text">
+Si se desea eliminar el proveedor, se hace clic sobre el botón de <em><strong>eliminar</strong></em>, de lo contrario se hace clic en <em><strong>cancela</strong></em> o <em><strong>cerrar</strong></em> para no eliminar el proveedor. <br>
+<em><strong>Nota</strong></em>: si se elimina un proveedor, este se eliminara de forma permanente de la base de datos. <br>
+Al eliminar un proveedor se mostrara el siguiente mensaje de satisfacción.
+<div class="alert alert-warning alert-dismissible mensaje ejemplos" role="alert">
+        <button type="button" class="close" data-dismiss="alert"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+        Proveedor eliminado con éxito.
+    </div>
