[Update - Manual de usuario]

--- a/templates/help/productos.html
+++ b/templates/help/productos.html
@@ -1,24 +1,18 @@
 
 <div class="description add">
-	<h2 class="title-help">Agregar proveedor</h2>
+	<h2 class="title-help">Agregar producto</h2>
 	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem enim adipisci fugiat labore quae dicta odio facilis, molestiae, velit itaque suscipit eius delectus! Sed officiis qui rem eos exercitationem laboriosam?
 	<a href="./help.php?module=add&code=2554568910">Continuar leyendo</a>
 </div>
 
 <div class="description see">
-	<h2 class="title-see">Ver más información sobre la empresa</h2>
+	<h2 class="title-see">Buscar producto por nombres</h2>
 	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem enim adipisci fugiat labore quae dicta odio facilis, molestiae, velit itaque suscipit eius delectus! Sed officiis qui rem eos exercitationem laboriosam?
 	<a href="./help.php?module=plus&code=2404201008">Continuar leyendo</a>
 </div>
 
 <div class="description edit">
-	<h2 class="title-edit">Editar datos del proveedor</h2>
+	<h2 class="title-edit">Buscar productos por fecha de ingreso</h2>
 	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem enim adipisci fugiat labore quae dicta odio facilis, molestiae, velit itaque suscipit eius delectus! Sed officiis qui rem eos exercitationem laboriosam?
 	<a href="./help.php?module=edit&code=7258307149">Continuar leyendo</a>
-</div>
-
-<div class="description delete">
-	<h2 class="title-delete">Eliminar proveedor</h2>
-	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem enim adipisci fugiat labore quae dicta odio facilis, molestiae, velit itaque suscipit eius delectus! Sed officiis qui rem eos exercitationem laboriosam?
-	<a href="./help.php?module=delete&code=8542136520">Continuar leyendo</a>
 </div>
